# colloquium

./: CMakeLists.txt  README.md
requirements/: CMakeLists_requirements.txt  ITranslator.txt  Message.txt  OpenAITranslator.txt  Parameter.txt  Tool.txt  Translation_Exception.txt  combined.txt  creating_requirements_documentation.txt  directory_structure.txt  http_client.txt  project.txt
src/: CMakeLists.txt
src/client/: CMakeLists.txt  llm_client.cpp  llm_client.hpp
src/core/: CMakeLists.txt  message.cpp  message.hpp  parameter.cpp  parameter.hpp  source.hpp  streamsource.hpp  tool.cpp  tool.hpp
src/exceptions/: llm_exceptions.hpp
src/http_client/: CMakeLists.txt
src/http_client/include/http_client/: http_client_exception.hpp  ihttp_client.hpp
src/http_client/src/: curl_http_client.cpp  curl_http_client.hpp
src/main/: main.cpp
src/session/: CMakeLists.txt  llm_session.cpp  llm_session.hpp
src/translator/: CMakeLists.txt  itranslator.hpp  openai_translator.cpp  openai_translator.hpp  translation_exception.hpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  message_test.cpp  parameter_test.cpp  tool_test.cpp
tests/http_client/: CMakeLists.txt
tests/http_client/unit_tests/: curl_http_client_test.cpp  mock_http_client.hpp
tests/llm_client/: CMakeLists.txt
tests/translator/: openai_translator_test.cpp
